welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:6: error: ';' expected but ',' found.
	for (x<-1 to x) {recule(), poseBiscuit()}
                                 ^