welcome.lessons.welcome.methods.basics.Methods.scala.code
var x=0
def goAndGet() {
	while(!estSurBiscuit()) {avance();  x=x+1}
	if (estSurBiscuit()) {prendBiscuit()}
	for (x<-1 to x) {recule(), poseBiscuit()}
}
